fix spacing around byline due to unnecessarily floated hero figure above

--- a/ui/css/article-feature.css
+++ b/ui/css/article-feature.css
@@ -16,6 +16,7 @@
 }
 
 .article-feature-wide .article-hero figure {
+    float: none;
     padding: 0;
     margin: 0;
 }
